@@ -286,7 +286,8 @@ static inline void chol_common_codelet_update_potrf(void *descr[], int s, void *
 				int Lwork = STARPU_VARIABLE_GET_ELEMSIZE(descr[1]) / sizeof(float);
 
 				sstatus = cusolverDnSpotrf(starpu_cusolverDn_get_local_handle(), CUBLAS_FILL_MODE_LOWER, nx, sub11, ld, workspace, Lwork, NULL);
-				STARPU_ASSERT(sstatus == CUSOLVER_STATUS_SUCCESS);
+				if (sstatus != CUSOLVER_STATUS_SUCCESS)
+					STARPU_CUSOLVER_REPORT_ERROR(sstatus);
 			}
 #elif defined(STARPU_HAVE_MAGMA)
 			{
